# grocia-api

./: .env.template  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_05_25_0915-e9f81178f878_create_products_table.py
scripts/: downgrade.sh  makemigrations.sh
src/: config.py  db.py  main.py  models.py
src/products/: models.py  route.py  schemas.py  service.py
