[tool.poetry]
name = "grocia-api"
version = "0.1.0"
description = ""
authors = ["Thang Phan <phancaothng@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.111.0"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
