[tool.poetry]
name = "grocia-api"
version = "0.1.0"
description = ""
authors = ["Thang Phan <phancaothng@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
pytest = "^8.2.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.111.0"
ruff = "^0.4.5"
pydantic-settings = "^2.2.1"
pytest = "^8.2.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
